// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageToggle should match snapshot with custom languages 1`] = `
<div
  class="flex items-center space-x-2"
>
  <button
    aria-label="Switch to French"
    class="text-sm font-medium px-2 py-1 rounded transition-colors text-stone-700 hover:text-stone-950"
    type="button"
  >
    🇫🇷
  </button>
  <button
    aria-label="Switch to German"
    class="text-sm font-medium px-2 py-1 rounded transition-colors text-stone-700 hover:text-stone-950"
    type="button"
  >
    🇩🇪
  </button>
</div>
`;

exports[`LanguageToggle should match snapshot with default languages 1`] = `
<div
  class="flex items-center space-x-2"
>
  <button
    aria-label="Switch to English"
    class="text-sm font-medium px-2 py-1 rounded transition-colors bg-stone-950 text-white"
    type="button"
  >
    🇺🇸
  </button>
  <button
    aria-label="Switch to Spanish"
    class="text-sm font-medium px-2 py-1 rounded transition-colors text-stone-700 hover:text-stone-950"
    type="button"
  >
    🇪🇸
  </button>
</div>
`;
